--- a/REACT/proyecto-pieles/src/App.css
+++ b/REACT/proyecto-pieles/src/App.css
@@ -32,7 +32,136 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
+  }
+}
+
+/* Estilo para el submenú de categorías */
+.categories-menu {
+  display: none;
+  /* Inicialmente oculto */
+  background-color: #444;
+  padding: 10px;
+  border-radius: 5px;
+  margin-top: 5px;
+}
+
+.categories-menu.open {
+  display: block;
+  /* Se muestra cuando isCategoriesOpen es true */
+}
+
+.categories-menu ul {
+  list-style: none;
+  padding: 0;
+}
+
+.categories-menu li {
+  padding: 5px 0;
+}
+
+.categories-menu a {
+  color: white;
+  text-decoration: none;
+}
+
+.categories-menu a:hover {
+  color: #ccc;
+}
+
+/* Contenedor del menú de categorías */
+.categories-dropdown {
+  position: absolute;
+  top: 176px;
+  /* Ajusta según la altura del Navbar */
+  left: 50%;
+  transform: translateX(-50%);
+  width: 250px;
+  background-color: #333;
+  border-radius: 8px;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
+  text-align: left;
+  z-index: 1000;
+  overflow: hidden;
+
+  /* Transición para el efecto cortina */
+  max-height: 0;
+  opacity: 0;
+  transition: max-height 0.4s ease-out, opacity 0.3s ease-out;
+}
+
+/* Cuando el menú está abierto */
+.categories-dropdown.open {
+  max-height: 100%;
+
+  /* Ajusta según el contenido */
+  opacity: 1;
+  padding: 10px;
+}
+
+/* Lista de categorías */
+.categories-dropdown ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.categories-dropdown li {
+  padding: 8px 15px;
+}
+
+.categories-dropdown a {
+  color: white;
+  text-decoration: none;
+  display: block;
+}
+
+.categories-dropdown a:hover {
+  color: #ddd;
+}
+
+/* Asegura que el botón de categorías sea clickeable */
+.categories-button {
+  cursor: pointer;
+}
+
+/* Estilos para dispositivos móviles y tablet */
+@media (max-width: 768px) {
+  .categories-menu {
+    display: none;
+    flex-direction: column;
+    background-color: #444;
+    padding: 10px;
+    border-radius: 5px;
+    margin-top: 5px;
+  }
+
+  .categories-menu.open {
+    display: flex;
+  }
+
+  .categories-button {
+    display: block;
+  }
+}
+
+/* Estilos para dispositivos de escritorio */
+@media (min-width: 769px) {
+  .categories-menu {
+    display: flex;
+    flex-direction: row;
+    background-color: transparent;
+    padding: 0;
+    margin: 0;
+  }
+
+  .categories-menu li {
+    padding: 0 15px;
+  }
+
+  .categories-button {
+    display: none;
   }
 }
